--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1"
+    "reactstrap": "^8.5.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0"
   },
   "scripts": {
     "start": "env-cmd -f ../config/dev.env react-scripts start",
