--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "env-cmd": "^10.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0"
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "start": "env-cmd -f ../config/dev.env react-scripts start",
