--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node backend/index.js",
     "dev": "env-cmd -f config/dev.env nodemon backend/index.js",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "cd frontend && yarn && yarn run build"
   },
   "repository": {
     "type": "git",
