--- a/package.json
+++ b/package.json
@@ -1,59 +1,42 @@
 {
-  "name": "pswebsite",
-  "version": "1.0.0",
-  "description": "ps station finder",
-  "main": "backend/index.js",
-  "scripts": {
-    "start": "node backend/index.js",
-    "dev": "env-cmd -f config/dev.env nodemon backend/index.js",
-    "test": "jest",
-    "heroku-postbuild": "cd frontend && npm i && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/madhavgupta211/pswebsite.git"
-  },
-  "keywords": [
-    "ps",
-    "practice",
-    "school",
-    "station"
-  ],
-  "author": "madhavgupta211 pratham1002",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/madhavgupta211/pswebsite/issues"
-  },
-  "homepage": "https://github.com/madhavgupta211/pswebsite#readme",
-  "devDependencies": {
-    "create-react-app": "^3.4.1",
-    "env-cmd": "^10.1.0",
-    "eslint": "^7.4.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.1.0",
-    "nodemon": "^2.0.4"
-  },
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
-    "admin-bro": "^2.8.0",
-    "admin-bro-expressjs": "^2.1.1",
-    "admin-bro-mongoose": "^0.5.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "cookie-parser": "^1.4.5",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "express-formidable": "^1.2.0",
-    "googleapis": "^55.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.9",
-    "mongoose": "^5.9.25",
-    "mongoose-url-slugs": "^1.0.2",
-    "morgan": "^1.10.0",
-    "query-string": "^6.13.1",
-    "validator": "^13.1.1"
+    "bootstrap": "^4.5.2",
+    "env-cmd": "^10.1.0",
+    "font-awesome": "^4.7.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "reactstrap": "^8.5.1"
+  },
+  "scripts": {
+    "start": "env-cmd -f ../config/dev.env react-scripts start",
+    "build": "env-cmd -f ../config/dev.env react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
